# HINT

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  back.c  basetypes.h  btex.w  content.h  ctex.w  dummy.w  dvi.h  error.h  erroras.h  fonts.c  fonts.h  format.h  format.w  get.c  get.h  gl_code.cpp  harith.c  hbox.c  hbuildpage.c  hbuildpageup.c  hdefaults.c  hdefaults.h  hdisplay.c  hfont.c  hfonts.c  hfonts.h  hformat.c  hformat.h  hget.c  hget.h  hint.c  hint.h  hint.w  hinttop.c  hinttop.h  hlinebreak.c  hlist.c  hmem.c  hpack.c  (+32 more)
app/src/main/res/layout/: about.xml  (+2 more)
examples/: .gitignore  Makefile  bible.hnt  bmp.hnt  calibration.hnt  calibration.tex  channels.hnt  cmmf.base  color0.hnt  color0.tex  color1.hnt  color1.tex  color2.hnt  color2.tex  color3.hnt  color3.tex  ctex.hnt  ctex.idx  ctex.scn  ctex.tex  ctex.toc  cwebmac.tex  cwebman-ru.hnt  display.hnt  eqno.hnt  fonts.hnt  fonts.tex  format.bbl  format.get.srt  format.hnt  format.ind  format.put.srt  format.red.srt  format.scn  format.sty  format.tex  format.toc  format.wrt.srt  gerdoc.hnt  gerdoc.tex  (+36 more)
examples/Download/: 2021.linalg.ex01.hnt  2021.linalg.sol01.hnt  bmp.hnt  leaders.hnt  math.hnt  mfpreface.hnt  sample2e.hnt  ueb2.hnt
gradle/wrapper/: gradle-wrapper.properties
hilatex/: .gitignore  README.md
hilatex/base/: Makefile  README.md  hhitex.def
hilatex/examples/: README.md  hhitex.def  ltxfloat1.tex  ltxlinks1.tex  ltxlinks5.tex
hilatex/format/: README.md  hitex.fmt
hilatex/linux/: hitex
hilatex/tests/: .gitignore  Makefile  README.md  gamma-sRGBA.xcf  hitex.def  ltxcolor1.tex  ltxcolor2.tex  ltxcolor3.tex  ltxcolor4.tex  ltxcolor5.tex  ltxcolor6.tex  ltxfloat1.tex  ltxfloat2.tex  ltximage1.tex  ltximage2.tex  ltxlinks2.tex  ltxlinks3.bbl  ltxlinks3.bib  ltxlinks3.tex  ltxlinks4.tex  ltxlinks5.tex  ltxlinks6.tex  plainfloat1.tex  plainimage1.tex  plainimage2.tex  plainimage3.tex  plainimage4.tex  plainimage5.tex  plainlinks1.tex  plainlinks2.tex
hintview/: .gitignore  README.md
hintview/Android/: .gitignore  README.md  build.gradle  gradle.properties  lint.xml
hintview/Android/app/: build.gradle
hintview/Android/app/src/main/cpp/: CMakeLists.txt  btex.w  ctex.w  format.h  format.w  get.c  gl_code.cpp  hfonts.c  hint.c  hint.h  hint.w  hrender.c  htex.c  htex.ch  rendergl.c  rendernative.h  tables.c
hintview/Android/app/src/main/cpp/freetype/cff/: cffload.c
hintview/Android/app/src/main/cpp/freetype/truetype/: ttgxvar.c
hintview/Android/app/src/main/cpp/include/freetype/config/: ftmodule.h
hintview/Android/examples/: format.hnt  gerdoc.hnt  head.hnt  jpg.hnt  leaders.hnt  ltxref.hnt  mfpreface.hnt  png.hnt  vtop.hnt
hintview/Android/gradle/wrapper/: gradle-wrapper.properties
hintview/GTK/: Makefile  dialog.c  edu.hm.cs.hintview.gschema.xml  header.c  hintview.c  hintview.spec  main.c  main.h  outline.c  preferences.c  renderOGL.c  resources.xml  search-bar.c  settings.c
hintview/Linux/: .gitignore  CMakeLists.txt  Makefile  README.md  about.c  gui.h  header.c  help.tex  hintview.1  hintview.desktop  hintview.spec  hintview.tex  hintview.xml  main.c  main.h  outline.c  preferences.c  renderOGL.c  resources.c  resources.xml  search-bar.c  search.c  settings.c
hintview/Linux/tests/: .gitignore  Makefile  color.hint  color.hnt  mfp.hint  mfpcolor.hint  plainlinks1.hint  plainlinks2.hint  plainlinks2color.hint
hintview/MacOS/: Credits.rtf  Info.plist  README.md  btex.w  hintviewDebug.entitlements  hintviewRelease.entitlements
hintview/MacOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
hintview/MacOS/ReadMe.rtfd/: TXT.rtf
hintview/MacOS/app.help/: index.html  keys.html  mouse.html  preferences.html
hintview/MacOS/en.lproj/: MainMenu.xib
hintview/MacOS/hintview.xcodeproj/: .gitignore  project.pbxproj
hintview/MacOS/src/: AppDelegate.h  AppDelegate.m  HintOpenGLView.h  HintOpenGLView.m  PrefView.h  PrefView.m  PrintView.h  PrintView.m  Sections.h  Sections.m  SectionsController.h  SectionsController.m  main.h  main.m  renderOGL.c
hintview/Win32/: .gitignore  HintView.sln  README.md  button.c  button.h  glcontext.c  print.c  print.h  renderOGL.c  resource.h  saveimage.h  search.h  settings.c  settings.h  winmain.c  winmain.h  winreg.c
hintview/Win64/: .gitignore  HintView.sln  HintView.vcproj  button.c  button.h  format.w  glcontext.c  glcontext.h  hint.w  hintview.rc  hintview.vcxproj  hintview.vcxproj.filters  outline.c  outline.h  print.c  print.h  renderOGL.c  resource.h  saveimage.c  saveimage.h  search.c  search.h  settings.c  settings.h  winmain.c  winmain.h  winreg.c  winreg.h
hintview/Win64/freetype/: freetype.vcxproj
hintview/Win64/zlib/: zlib.vcxproj  zlib.vcxproj.filters
hintview/backend/: README.md  basetypes.h  error.h  format.h  format.w  get.c  get.h  hfonts.c  hfonts.h  hformat.c  hint.c  hint.h  hint.w  hrender.c  hrender.h  htex.c  htex.h  htex.w  rendernative.h  stb_image.c  tables.c
hintview/iOS/: HINT.icns  Info.plist  README.md  htex.w
hintview/iOS/Base.lproj/: Main.storyboard
hintview/iOS/HintView.xcodeproj/: project.pbxproj
hintview/iOS/Settings.bundle/: Root.plist
hintview/iOS/iOSHintView.xcodeproj/: project.pbxproj
hintview/iOS/src/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  format.w  main.h  main.m  renderegl.m
hintview/minimal/: Makefile  README.md  main.c  renderOGL.c
hintview/minimal/tests/: mfp.tex  plainlinks1.hint  plainlinks2color.hint
hintview/resources/: AndroidPreview.xcf  ButtonFace36x36xRGB.xcf  LICENSE  README.md  funktionsgraphik.xcf  toolbar.xcf
tests/: bmp.tex  channels.hnt  channels.tex  ltxref.tex
texprof/: .gitignore  README.md  texprof.w  tprof.w
texprof/aux/: hintmac.tex  latexprof.ini  texprof.ini
texprof/doc/: texprofile.hnt  tprof.hnt
texprof/fmt/: pdftexprof.fmt  texprof.fmt
texprof/src/: .gitignore  Makefile  texprof.c  texprof.w  texprofile.1  texprofile.c  tprof.c  tprof.w
(+53 files in other folders)
